# syncbot

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  README.md  alembic.ini  deploy.ps1  deploy.sh  docker-compose.yml  pyproject.toml  samconfig.toml  slack-manifest.json  slack-manifest.yaml  template.yaml
.devcontainer/: devcontainer.json  docker-compose.dev.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-aws.yml  deploy-gcp.yml  sam-pipeline.yml
db/: alembic.ini  init.sql
db/alembic/: env.py
db/alembic/versions/: 001_baseline.py
db/migrations/: README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  BACKUP_AND_MIGRATION.md  DEPLOYMENT.md  DEVELOPMENT.md  IMPROVEMENTS.md  INFRA_CONTRACT.md  USER_GUIDE.md
infra/aws/: template.bootstrap.yaml  template.yaml
infra/aws/db_setup/: Makefile  handler.py  requirements.txt
infra/aws/scripts/: deploy.sh  print-bootstrap-outputs.sh
infra/aws/tests/: test_sam_template_validate.py
infra/gcp/: README.md  main.tf  outputs.tf  variables.tf
infra/gcp/scripts/: deploy.sh  print-bootstrap-outputs.sh
infra/gcp/tests/: test_terraform_validate.py
syncbot/: app.py  constants.py  logger.py  requirements.txt  routing.py  slack_manifest_scopes.py
syncbot/builders/: __init__.py  _common.py  channel_sync.py  home.py  sync.py  user_mapping.py
syncbot/db/: __init__.py  schemas.py
syncbot/db/alembic/: env.py
syncbot/db/alembic/versions/: 001_baseline.py
syncbot/federation/: __init__.py  api.py  core.py
syncbot/handlers/: __init__.py  _common.py  channel_sync.py  export_import.py  federation_cmds.py  group_manage.py  groups.py  messages.py  sync.py  tokens.py  users.py
syncbot/helpers/: __init__.py  _cache.py  core.py  encryption.py  export_import.py  files.py  notifications.py  oauth.py  refresh.py  slack_api.py  user_matching.py  workspace.py
syncbot/slack/: actions.py  blocks.py  deferred_ack_views.py  forms.py  orm.py
syncbot/utils/: announcements.py  builders.py  constants.py  handlers.py  helpers.py  routing.py
syncbot/utils/db/: __init__.py  schemas.py
syncbot/utils/slack/: actions.py  forms.py  orm.py
tests/: conftest.py  test_app_main_response.py  test_app_registration.py  test_channel_sync_handlers.py  test_container_http_server.py  test_db.py  test_db_setup.py  test_deploy_script_syntax.py  test_export_import_handlers.py  test_federation_inbound_resolve.py  test_federation_reactions.py  test_file_upload_attribution.py  test_groups_handlers.py  test_handlers.py  test_helpers.py  test_message_event_dedup.py  test_message_sync.py  test_oauth.py  test_primary_workspace_gates.py  test_routing_deferred_ack.py  test_slack_manifest_scopes.py  test_split_message_reactions.py
