[tool.poetry]
name = "syncbot"
version = "0.1.0"
description = ""
authors = ["Evan Petzoldt <evan.petzoldt@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = "^1.18.0"
sqlalchemy = "<2.0"
pymysql = "^1.1.0"
cryptography = "^41.0.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
boto3 = "^1.28.57"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
